i can kill a lot

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.16.6",
     "input-otp": "^1.2.4",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.453.0",
     "monaco-editor": "^0.52.0",
     "next": "^15.0.1",
@@ -47,6 +48,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
